--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ stages:
   - build
 
 check_update:
+  stage: build
   script:
   - ./config --strict-warnings
   - make -s update
@@ -15,48 +16,56 @@ check_update:
 
 
 check_docs:
+  stage: build
   script:
   - ./config --strict-warnings && perl configdata.pm --dump
   - make -s build_generated
   - make doc-nits
 
 basic_gcc:
+  stage: build
   script:
   - ./config --strict-warnings
   - make -s -j4
   - make test
   
 minimal:
+  stage: build
   script:
   - ./config --strict-warnings no-bulk no-pic no-asm -DOPENSSL_NO_SECURE_MEMORY -DOPENSSL_SMALL_FOOTPRINT && perl configdata.pm --dump
   - make -s -j4
   - make test HARNESS_JOBS=${HARNESS_JOBS:-4}
 
 no-deprecated:
+  stage: build
   script:
   - ./config --strict-warnings no-deprecated && perl configdata.pm --dump
   - make -s -j4
   - make test HARNESS_JOBS=${HARNESS_JOBS:-4}
 
 sanitizers:
+  stage: build
   script:
   - ./config --debug enable-asan enable-ubsan enable-rc5 enable-md2 enable-ec_nistp_64_gcc_128 && perl configdata.pm --dump
   - make -s -j4
   - make test HARNESS_JOBS=${HARNESS_JOBS:-4} OPENSSL_TEST_RAND_ORDER=0
 
 enable_non-default_options:
+  stage: build
   script:
   - ./config --strict-warnings no-ec enable-ssl-trace enable-zlib enable-zlib-dynamic enable-crypto-mdebug enable-crypto-mdebug-backtrace enable-egd && perl configdata.pm --dump
   - make -s -j4
   - make test HARNESS_JOBS=${HARNESS_JOBS:-4}
 
 legacy:
+  stage: build
   script:
   - ./config -Werror --debug no-afalgeng no-shared enable-crypto-mdebug enable-rc5 enable-md2 && perl configdata.pm --dump
   - make -s -j4
   - make test HARNESS_JOBS=${HARNESS_JOBS:-4}
 
 buildtest:
+  stage: build
   script:
   - ./config no-asm no-makedepend enable-buildtest-c++ --strict-warnings -D_DEFAULT_SOURCE && perl configdata.pm --dump
   - make -s -j4
